--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,8 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+
+[dependency-groups]
+dev = [
+    "pre-commit>=4.4.0",
+]
