--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,15 +27,10 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
 
-[tool.ruff]
+[tool.black]
 line-length = 88
-target-version = "py312"
-
-[tool.ruff.format]
-quote-style = "single"
-line-ending = "auto"
-indent-style = "space"
-skip-magic-trailing-comma = false
+target-version = ["py310"]
+skip-string-normalization = true
 
 [tool.isort]
 profile = "black"
